plugins/policy_engine/lang/parser/sfpl_parser.go
// Code generated from Sfpl.g4 by ANTLR 4.7.2. DO NOT EDIT.

package parser // Sfpl

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa


var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'rule'", "'filter'", "'macro'", "'list'", "'name'", "'items'", "'condition'", 
	"'desc'", "'action'", "'output'", "'priority'", "'tags'", "'and'", "'or'", 
	"'not'", "'<'", "'<='", "'>'", "'>='", "'='", "'!='", "'in'", "'contains'", 
	"'icontains'", "'startswith'", "'pmatch'", "'exists'", "'['", "']'", "'('", 
	"')'", "','", "'-'",
}
var symbolicNames = []string{
	"", "RULE", "FILTER", "MACRO", "LIST", "NAME", "ITEMS", "COND", "DESC", 
	"ACTION", "OUTPUT", "PRIORITY", "TAGS", "AND", "OR", "NOT", "LT", "LE", 
	"GT", "GE", "EQ", "NEQ", "IN", "CONTAINS", "ICONTAINS", "STARTSWITH", "PMATCH", 
	"EXISTS", "LBRACK", "RBRACK", "LPAREN", "RPAREN", "LISTSEP", "DECL", "DEF", 
	"SEVERITY", "ID", "NUMBER", "PATH", "STRING", "WS", "NL", "COMMENT", "ANY",
}

var ruleNames = []string{
	"policy", "f_rule", "f_filter", "f_macro", "f_list", "expression", "or_expression", 
	"and_expression", "term", "items", "variable", "atom", "text", "binary_operator", 
	"unary_operator",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SfplParser struct {
	*antlr.BaseParser
}

func NewSfplParser(input antlr.TokenStream) *SfplParser {
	this := new(SfplParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Sfpl.g4"

	return this
}

// SfplParser tokens.
const (
	SfplParserEOF = antlr.TokenEOF
	SfplParserRULE = 1
	SfplParserFILTER = 2
	SfplParserMACRO = 3
	SfplParserLIST = 4
	SfplParserNAME = 5
	SfplParserITEMS = 6
	SfplParserCOND = 7
	SfplParserDESC = 8
	SfplParserACTION = 9
	SfplParserOUTPUT = 10
	SfplParserPRIORITY = 11
	SfplParserTAGS = 12
	SfplParserAND = 13
	SfplParserOR = 14
	SfplParserNOT = 15
	SfplParserLT = 16
	SfplParserLE = 17
	SfplParserGT = 18
	SfplParserGE = 19
	SfplParserEQ = 20
	SfplParserNEQ = 21
	SfplParserIN = 22
	SfplParserCONTAINS = 23
	SfplParserICONTAINS = 24
	SfplParserSTARTSWITH = 25
	SfplParserPMATCH = 26
	SfplParserEXISTS = 27
	SfplParserLBRACK = 28
	SfplParserRBRACK = 29
	SfplParserLPAREN = 30
	SfplParserRPAREN = 31
	SfplParserLISTSEP = 32
	SfplParserDECL = 33
	SfplParserDEF = 34
	SfplParserSEVERITY = 35
	SfplParserID = 36
	SfplParserNUMBER = 37
	SfplParserPATH = 38
	SfplParserSTRING = 39
	SfplParserWS = 40
	SfplParserNL = 41
	SfplParserCOMMENT = 42
	SfplParserANY = 43
)

// SfplParser rules.
const (
	SfplParserRULE_policy = 0
	SfplParserRULE_f_rule = 1
	SfplParserRULE_f_filter = 2
	SfplParserRULE_f_macro = 3
	SfplParserRULE_f_list = 4
	SfplParserRULE_expression = 5
	SfplParserRULE_or_expression = 6
	SfplParserRULE_and_expression = 7
	SfplParserRULE_term = 8
	SfplParserRULE_items = 9
	SfplParserRULE_variable = 10
	SfplParserRULE_atom = 11
	SfplParserRULE_text = 12
	SfplParserRULE_binary_operator = 13
	SfplParserRULE_unary_operator = 14
)

// IPolicyContext is an interface to support dynamic dispatch.
type IPolicyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPolicyContext differentiates from other interfaces.
	IsPolicyContext()
}

type PolicyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPolicyContext() *PolicyContext {
	var p = new(PolicyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfplParserRULE_policy
	return p
}

func (*PolicyContext) IsPolicyContext() {}

func NewPolicyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PolicyContext {
	var p = new(PolicyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfplParserRULE_policy

	return p
}

func (s *PolicyContext) GetParser() antlr.Parser { return s.parser }

func (s *PolicyContext) EOF() antlr.TerminalNode {
	return s.GetToken(SfplParserEOF, 0)
}

func (s *PolicyContext) AllF_rule() []IF_ruleContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IF_ruleContext)(nil)).Elem())
	var tst = make([]IF_ruleContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IF_ruleContext)
		}
	}

	return tst
}

func (s *PolicyContext) F_rule(i int) IF_ruleContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IF_ruleContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IF_ruleContext)
}

func (s *PolicyContext) AllF_filter() []IF_filterContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IF_filterContext)(nil)).Elem())
	var tst = make([]IF_filterContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IF_filterContext)
		}
	}

	return tst
}

func (s *PolicyContext) F_filter(i int) IF_filterContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IF_filterContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IF_filterContext)
}

func (s *PolicyContext) AllF_macro() []IF_macroContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IF_macroContext)(nil)).Elem())
	var tst = make([]IF_macroContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IF_macroContext)
		}
	}

	return tst
}

func (s *PolicyContext) F_macro(i int) IF_macroContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IF_macroContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IF_macroContext)
}

func (s *PolicyContext) AllF_list() []IF_listContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IF_listContext)(nil)).Elem())
	var tst = make([]IF_listContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IF_listContext)
		}
	}

	return tst
}

func (s *PolicyContext) F_list(i int) IF_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IF_listContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IF_listContext)
}

func (s *PolicyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PolicyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *PolicyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.EnterPolicy(s)
	}
}

func (s *PolicyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.ExitPolicy(s)
	}
}

func (s *PolicyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SfplVisitor:
		return t.VisitPolicy(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *SfplParser) Policy() (localctx IPolicyContext) {
	localctx = NewPolicyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SfplParserRULE_policy)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(34)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	for ok := true; ok; ok = _la == SfplParserDECL {
		p.SetState(34)
		p.GetErrorHandler().Sync(p)
		switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(30)
				p.F_rule()
			}


		case 2:
			{
				p.SetState(31)
				p.F_filter()
			}


		case 3:
			{
				p.SetState(32)
				p.F_macro()
			}


		case 4:
			{
				p.SetState(33)
				p.F_list()
			}

		}

		p.SetState(36)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(38)
		p.Match(SfplParserEOF)
	}



	return localctx
}


// IF_ruleContext is an interface to support dynamic dispatch.
type IF_ruleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsF_ruleContext differentiates from other interfaces.
	IsF_ruleContext()
}

type F_ruleContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyF_ruleContext() *F_ruleContext {
	var p = new(F_ruleContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfplParserRULE_f_rule
	return p
}

func (*F_ruleContext) IsF_ruleContext() {}

func NewF_ruleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *F_ruleContext {
	var p = new(F_ruleContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfplParserRULE_f_rule

	return p
}

func (s *F_ruleContext) GetParser() antlr.Parser { return s.parser }

func (s *F_ruleContext) DECL() antlr.TerminalNode {
	return s.GetToken(SfplParserDECL, 0)
}

func (s *F_ruleContext) RULE() antlr.TerminalNode {
	return s.GetToken(SfplParserRULE, 0)
}

func (s *F_ruleContext) AllDEF() []antlr.TerminalNode {
	return s.GetTokens(SfplParserDEF)
}

func (s *F_ruleContext) DEF(i int) antlr.TerminalNode {
	return s.GetToken(SfplParserDEF, i)
}

func (s *F_ruleContext) AllText() []ITextContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITextContext)(nil)).Elem())
	var tst = make([]ITextContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITextContext)
		}
	}

	return tst
}

func (s *F_ruleContext) Text(i int) ITextContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITextContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITextContext)
}

func (s *F_ruleContext) DESC() antlr.TerminalNode {
	return s.GetToken(SfplParserDESC, 0)
}

func (s *F_ruleContext) COND() antlr.TerminalNode {
	return s.GetToken(SfplParserCOND, 0)
}

func (s *F_ruleContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *F_ruleContext) PRIORITY() antlr.TerminalNode {
	return s.GetToken(SfplParserPRIORITY, 0)
}

func (s *F_ruleContext) SEVERITY() antlr.TerminalNode {
	return s.GetToken(SfplParserSEVERITY, 0)
}

func (s *F_ruleContext) TAGS() antlr.TerminalNode {
	return s.GetToken(SfplParserTAGS, 0)
}

func (s *F_ruleContext) Items() IItemsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IItemsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IItemsContext)
}

func (s *F_ruleContext) ACTION() antlr.TerminalNode {
	return s.GetToken(SfplParserACTION, 0)
}

func (s *F_ruleContext) OUTPUT() antlr.TerminalNode {
	return s.GetToken(SfplParserOUTPUT, 0)
}

func (s *F_ruleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *F_ruleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *F_ruleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.EnterF_rule(s)
	}
}

func (s *F_ruleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.ExitF_rule(s)
	}
}

func (s *F_ruleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SfplVisitor:
		return t.VisitF_rule(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *SfplParser) F_rule() (localctx IF_ruleContext) {
	localctx = NewF_ruleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SfplParserRULE_f_rule)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Match(SfplParserDECL)
	}
	{
		p.SetState(41)
		p.Match(SfplParserRULE)
	}
	{
		p.SetState(42)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(43)
		p.Text()
	}
	{
		p.SetState(44)
		p.Match(SfplParserDESC)
	}
	{
		p.SetState(45)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(46)
		p.Text()
	}
	{
		p.SetState(47)
		p.Match(SfplParserCOND)
	}
	{
		p.SetState(48)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(49)
		p.Expression()
	}
	{
		p.SetState(50)
		_la = p.GetTokenStream().LA(1)

		if !(_la == SfplParserACTION || _la == SfplParserOUTPUT) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(51)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(52)
		p.Text()
	}
	{
		p.SetState(53)
		p.Match(SfplParserPRIORITY)
	}
	{
		p.SetState(54)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(55)
		p.Match(SfplParserSEVERITY)
	}
	{
		p.SetState(56)
		p.Match(SfplParserTAGS)
	}
	{
		p.SetState(57)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(58)
		p.Items()
	}



	return localctx
}


// IF_filterContext is an interface to support dynamic dispatch.
type IF_filterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsF_filterContext differentiates from other interfaces.
	IsF_filterContext()
}

type F_filterContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyF_filterContext() *F_filterContext {
	var p = new(F_filterContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfplParserRULE_f_filter
	return p
}

func (*F_filterContext) IsF_filterContext() {}

func NewF_filterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *F_filterContext {
	var p = new(F_filterContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfplParserRULE_f_filter

	return p
}

func (s *F_filterContext) GetParser() antlr.Parser { return s.parser }

func (s *F_filterContext) DECL() antlr.TerminalNode {
	return s.GetToken(SfplParserDECL, 0)
}

func (s *F_filterContext) FILTER() antlr.TerminalNode {
	return s.GetToken(SfplParserFILTER, 0)
}

func (s *F_filterContext) AllDEF() []antlr.TerminalNode {
	return s.GetTokens(SfplParserDEF)
}

func (s *F_filterContext) DEF(i int) antlr.TerminalNode {
	return s.GetToken(SfplParserDEF, i)
}

func (s *F_filterContext) AllText() []ITextContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITextContext)(nil)).Elem())
	var tst = make([]ITextContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITextContext)
		}
	}

	return tst
}

func (s *F_filterContext) Text(i int) ITextContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITextContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITextContext)
}

func (s *F_filterContext) DESC() antlr.TerminalNode {
	return s.GetToken(SfplParserDESC, 0)
}

func (s *F_filterContext) COND() antlr.TerminalNode {
	return s.GetToken(SfplParserCOND, 0)
}

func (s *F_filterContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *F_filterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *F_filterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *F_filterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.EnterF_filter(s)
	}
}

func (s *F_filterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.ExitF_filter(s)
	}
}

func (s *F_filterContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SfplVisitor:
		return t.VisitF_filter(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *SfplParser) F_filter() (localctx IF_filterContext) {
	localctx = NewF_filterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SfplParserRULE_f_filter)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(60)
		p.Match(SfplParserDECL)
	}
	{
		p.SetState(61)
		p.Match(SfplParserFILTER)
	}
	{
		p.SetState(62)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(63)
		p.Text()
	}
	{
		p.SetState(64)
		p.Match(SfplParserDESC)
	}
	{
		p.SetState(65)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(66)
		p.Text()
	}
	{
		p.SetState(67)
		p.Match(SfplParserCOND)
	}
	{
		p.SetState(68)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(69)
		p.Expression()
	}



	return localctx
}


// IF_macroContext is an interface to support dynamic dispatch.
type IF_macroContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsF_macroContext differentiates from other interfaces.
	IsF_macroContext()
}

type F_macroContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyF_macroContext() *F_macroContext {
	var p = new(F_macroContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfplParserRULE_f_macro
	return p
}

func (*F_macroContext) IsF_macroContext() {}

func NewF_macroContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *F_macroContext {
	var p = new(F_macroContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfplParserRULE_f_macro

	return p
}

func (s *F_macroContext) GetParser() antlr.Parser { return s.parser }

func (s *F_macroContext) DECL() antlr.TerminalNode {
	return s.GetToken(SfplParserDECL, 0)
}

func (s *F_macroContext) MACRO() antlr.TerminalNode {
	return s.GetToken(SfplParserMACRO, 0)
}

func (s *F_macroContext) AllDEF() []antlr.TerminalNode {
	return s.GetTokens(SfplParserDEF)
}

func (s *F_macroContext) DEF(i int) antlr.TerminalNode {
	return s.GetToken(SfplParserDEF, i)
}

func (s *F_macroContext) ID() antlr.TerminalNode {
	return s.GetToken(SfplParserID, 0)
}

func (s *F_macroContext) COND() antlr.TerminalNode {
	return s.GetToken(SfplParserCOND, 0)
}

func (s *F_macroContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *F_macroContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *F_macroContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *F_macroContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.EnterF_macro(s)
	}
}

func (s *F_macroContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.ExitF_macro(s)
	}
}

func (s *F_macroContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SfplVisitor:
		return t.VisitF_macro(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *SfplParser) F_macro() (localctx IF_macroContext) {
	localctx = NewF_macroContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SfplParserRULE_f_macro)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(71)
		p.Match(SfplParserDECL)
	}
	{
		p.SetState(72)
		p.Match(SfplParserMACRO)
	}
	{
		p.SetState(73)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(74)
		p.Match(SfplParserID)
	}
	{
		p.SetState(75)
		p.Match(SfplParserCOND)
	}
	{
		p.SetState(76)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(77)
		p.Expression()
	}



	return localctx
}


// IF_listContext is an interface to support dynamic dispatch.
type IF_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsF_listContext differentiates from other interfaces.
	IsF_listContext()
}

type F_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyF_listContext() *F_listContext {
	var p = new(F_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfplParserRULE_f_list
	return p
}

func (*F_listContext) IsF_listContext() {}

func NewF_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *F_listContext {
	var p = new(F_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SfplParserRULE_f_list

	return p
}

func (s *F_listContext) GetParser() antlr.Parser { return s.parser }

func (s *F_listContext) DECL() antlr.TerminalNode {
	return s.GetToken(SfplParserDECL, 0)
}

func (s *F_listContext) LIST() antlr.TerminalNode {
	return s.GetToken(SfplParserLIST, 0)
}

func (s *F_listContext) AllDEF() []antlr.TerminalNode {
	return s.GetTokens(SfplParserDEF)
}

func (s *F_listContext) DEF(i int) antlr.TerminalNode {
	return s.GetToken(SfplParserDEF, i)
}

func (s *F_listContext) ID() antlr.TerminalNode {
	return s.GetToken(SfplParserID, 0)
}

func (s *F_listContext) ITEMS() antlr.TerminalNode {
	return s.GetToken(SfplParserITEMS, 0)
}

func (s *F_listContext) Items() IItemsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IItemsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IItemsContext)
}

func (s *F_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *F_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *F_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.EnterF_list(s)
	}
}

func (s *F_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SfplListener); ok {
		listenerT.ExitF_list(s)
	}
}

func (s *F_listContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SfplVisitor:
		return t.VisitF_list(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *SfplParser) F_list() (localctx IF_listContext) {
	localctx = NewF_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SfplParserRULE_f_list)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(79)
		p.Match(SfplParserDECL)
	}
	{
		p.SetState(80)
		p.Match(SfplParserLIST)
	}
	{
		p.SetState(81)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(82)
		p.Match(SfplParserID)
	}
	{
		p.SetState(83)
		p.Match(SfplParserITEMS)
	}
	{
		p.SetState(84)
		p.Match(SfplParserDEF)
	}
	{
		p.SetState(85)
		p.Items()
	}



	return localctx
}


// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SfplParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}
